--- a/CH00-llm_rag_pdf_AutoRAG_Evaluation/01.pdf_rag_QA.ipynb
+++ b/CH00-llm_rag_pdf_AutoRAG_Evaluation/01.pdf_rag_QA.ipynb
@@ -1558,10 +1558,10 @@
     "\n",
     "# 체인 걸기 \n",
     "rag_chain = (\n",
-    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}     # 유사도 기반으로 가장 관련있는 내용으로 검색\n",
+    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}     # 유사도 기반으로 가장 관련있는 내용으로 검색, 사용자 입력 \n",
     "    | prompt\n",
     "    | llm\n",
-    "    | StrOutputParser()     # 생성된 답변은 문자열로 \n",
+    "    | StrOutputParser()     # 생성된 답변은 문자열만 \n",
     ")\n",
     "\n",
     "\n",
