--- a/CH00-llm_rag_pdf_AutoRAG_Evaluation/02.AutoRAG_Gemma2_Qwen2.ipynb
+++ b/CH00-llm_rag_pdf_AutoRAG_Evaluation/02.AutoRAG_Gemma2_Qwen2.ipynb
@@ -2452,7 +2452,109 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>ground_truth</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>contexts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\"본문 소스 코드\" 자료의 등록일은 언제인가요?</td>\n",
+       "      <td>등록일은 2024년 6월 25일입니다.</td>\n",
+       "      <td>본문에는 \"본문 소스 코드\" 자료의 등록일이 언급되어 있지 않습니다. \\n\\n\\n</td>\n",
+       "      <td>[비전공자와 입문자의 마음을 사로잡은 강의가 개정판으로 돌아왔다. 최신 버전인 Pa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>이 책에 추가된 주요 내용은 무엇인가요?</td>\n",
+       "      <td>시계열 데이터의 효율적인 처리와 분석을 위한 다양한 기법이 추가되었습니다.</td>\n",
+       "      <td>이 책에 추가된 주요 내용은 다음과 같습니다.\\n\\n* Pandas 2.0 버전에서...</td>\n",
+       "      <td>[비전공자와 입문자의 마음을 사로잡은 강의가 개정판으로 돌아왔다. 최신 버전인 Pa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\"챗GPT 프롬프트 120% 질문 기술\" 보도자료의 발표일은 언제인가요?</td>\n",
+       "      <td>2024년 4월 24일입니다.</td>\n",
+       "      <td>2024-04-24 \\n</td>\n",
+       "      <td>[330\\n\\n[보도자료] 예제가 가득한 챗GPT 프롬프트 길라잡이\\n운영자\\n20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[보도자료] 파이썬과 엑셀로 시작하는 딥러닝이 발표된 날짜는 언제인가요?</td>\n",
+       "      <td>이 보도자료는 2023년 7월 19일에 발표되었습니다.</td>\n",
+       "      <td>2023-07-19  \\n</td>\n",
+       "      <td>[지은이 | 오승환과학고, 서울대를 졸업하고, 중 국 C KGSB MBA, FRM(...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>데이터 변화를 효과적으로 분석하기 위해 어떤 조치를 취했나요?</td>\n",
+       "      <td>시계열 데이터 처리 강화와 데이터 전처리 기법을 다양화하여 대폭 추가했습니다.</td>\n",
+       "      <td>시간에 따른 데이터 변화를 효과적으로 분석할 수 있도록 시간에 따른 데이터 변화를 ...</td>\n",
+       "      <td>[대폭 추가해 시간에 따른 데이터 변화를 효과적으로 분석할 수 있도록 했다. 또한 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   question  \\\n",
+       "0                \"본문 소스 코드\" 자료의 등록일은 언제인가요?   \n",
+       "1                    이 책에 추가된 주요 내용은 무엇인가요?   \n",
+       "2  \"챗GPT 프롬프트 120% 질문 기술\" 보도자료의 발표일은 언제인가요?   \n",
+       "3  [보도자료] 파이썬과 엑셀로 시작하는 딥러닝이 발표된 날짜는 언제인가요?   \n",
+       "4        데이터 변화를 효과적으로 분석하기 위해 어떤 조치를 취했나요?   \n",
+       "\n",
+       "                                  ground_truth  \\\n",
+       "0                        등록일은 2024년 6월 25일입니다.   \n",
+       "1    시계열 데이터의 효율적인 처리와 분석을 위한 다양한 기법이 추가되었습니다.   \n",
+       "2                             2024년 4월 24일입니다.   \n",
+       "3               이 보도자료는 2023년 7월 19일에 발표되었습니다.   \n",
+       "4  시계열 데이터 처리 강화와 데이터 전처리 기법을 다양화하여 대폭 추가했습니다.   \n",
+       "\n",
+       "                                              answer  \\\n",
+       "0      본문에는 \"본문 소스 코드\" 자료의 등록일이 언급되어 있지 않습니다. \\n\\n\\n   \n",
+       "1  이 책에 추가된 주요 내용은 다음과 같습니다.\\n\\n* Pandas 2.0 버전에서...   \n",
+       "2                                      2024-04-24 \\n   \n",
+       "3                                     2023-07-19  \\n   \n",
+       "4  시간에 따른 데이터 변화를 효과적으로 분석할 수 있도록 시간에 따른 데이터 변화를 ...   \n",
+       "\n",
+       "                                            contexts  \n",
+       "0  [비전공자와 입문자의 마음을 사로잡은 강의가 개정판으로 돌아왔다. 최신 버전인 Pa...  \n",
+       "1  [비전공자와 입문자의 마음을 사로잡은 강의가 개정판으로 돌아왔다. 최신 버전인 Pa...  \n",
+       "2  [330\\n\\n[보도자료] 예제가 가득한 챗GPT 프롬프트 길라잡이\\n운영자\\n20...  \n",
+       "3  [지은이 | 오승환과학고, 서울대를 졸업하고, 중 국 C KGSB MBA, FRM(...  \n",
+       "4  [대폭 추가해 시간에 따른 데이터 변화를 효과적으로 분석할 수 있도록 했다. 또한 ...  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Prompt\n",
     "template = \"\"\"Answer the question based only on the following context:\n",
@@ -2480,18 +2582,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9626c90e4fa1475c9851f0da028b1665",
+       "model_id": "76e2975ffbc64136b2dd75bd28e83e0d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Evaluating:   0%|          | 0/44 [00:00<?, ?it/s]"
+       "Evaluating:   0%|          | 0/144 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -2500,38 +2602,15 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[06/29/24 05:40:24] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> <span style=\"font-weight: bold\">[</span>output_parser.py:<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">71</span><span style=\"font-weight: bold\">]</span> &gt;&gt; Failed to parse output. Returning <span style=\"color: #800080; text-decoration-color: #800080; font-style: italic\">None</span>.   <a href=\"file:///Users/wiggler/Library/Caches/pypoetry/virtualenvs/langfuse-practice-ygCFMd-0-py3.11/lib/python3.11/site-packages/ragas/llms/output_parser.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">output_parser.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///Users/wiggler/Library/Caches/pypoetry/virtualenvs/langfuse-practice-ygCFMd-0-py3.11/lib/python3.11/site-packages/ragas/llms/output_parser.py#71\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">71</span></a>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[06/29/24 22:53:58] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> <span style=\"font-weight: bold\">[</span>output_parser.py:<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">71</span><span style=\"font-weight: bold\">]</span> &gt;&gt; Failed to parse output. Returning <span style=\"color: #800080; text-decoration-color: #800080; font-style: italic\">None</span>.   <a href=\"file://c:\\Users\\kim_h\\anaconda3\\envs\\rag\\Lib\\site-packages\\ragas\\llms\\output_parser.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">output_parser.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file://c:\\Users\\kim_h\\anaconda3\\envs\\rag\\Lib\\site-packages\\ragas\\llms\\output_parser.py#71\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">71</span></a>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[2;36m[06/29/24 05:40:24]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m \u001b[1m[\u001b[0moutput_parser.py:\u001b[1;36m71\u001b[0m\u001b[1m]\u001b[0m >> Failed to parse output. Returning \u001b[3;35mNone\u001b[0m.   \u001b]8;id=567075;file:///Users/wiggler/Library/Caches/pypoetry/virtualenvs/langfuse-practice-ygCFMd-0-py3.11/lib/python3.11/site-packages/ragas/llms/output_parser.py\u001b\\\u001b[2moutput_parser.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=816044;file:///Users/wiggler/Library/Caches/pypoetry/virtualenvs/langfuse-practice-ygCFMd-0-py3.11/lib/python3.11/site-packages/ragas/llms/output_parser.py#71\u001b\\\u001b[2m71\u001b[0m\u001b]8;;\u001b\\\n"
+       "\u001b[2;36m[06/29/24 22:53:58]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m \u001b[1m[\u001b[0moutput_parser.py:\u001b[1;36m71\u001b[0m\u001b[1m]\u001b[0m >> Failed to parse output. Returning \u001b[3;35mNone\u001b[0m.   \u001b]8;id=654746;file://c:\\Users\\kim_h\\anaconda3\\envs\\rag\\Lib\\site-packages\\ragas\\llms\\output_parser.py\u001b\\\u001b[2moutput_parser.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=236692;file://c:\\Users\\kim_h\\anaconda3\\envs\\rag\\Lib\\site-packages\\ragas\\llms\\output_parser.py#71\u001b\\\u001b[2m71\u001b[0m\u001b]8;;\u001b\\\n"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[06/29/24 05:43:03] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> <span style=\"font-weight: bold\">[</span>output_parser.py:<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">71</span><span style=\"font-weight: bold\">]</span> &gt;&gt; Failed to parse output. Returning <span style=\"color: #800080; text-decoration-color: #800080; font-style: italic\">None</span>.   <a href=\"file:///Users/wiggler/Library/Caches/pypoetry/virtualenvs/langfuse-practice-ygCFMd-0-py3.11/lib/python3.11/site-packages/ragas/llms/output_parser.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">output_parser.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///Users/wiggler/Library/Caches/pypoetry/virtualenvs/langfuse-practice-ygCFMd-0-py3.11/lib/python3.11/site-packages/ragas/llms/output_parser.py#71\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">71</span></a>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[2;36m[06/29/24 05:43:03]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m \u001b[1m[\u001b[0moutput_parser.py:\u001b[1;36m71\u001b[0m\u001b[1m]\u001b[0m >> Failed to parse output. Returning \u001b[3;35mNone\u001b[0m.   \u001b]8;id=821002;file:///Users/wiggler/Library/Caches/pypoetry/virtualenvs/langfuse-practice-ygCFMd-0-py3.11/lib/python3.11/site-packages/ragas/llms/output_parser.py\u001b\\\u001b[2moutput_parser.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=28536;file:///Users/wiggler/Library/Caches/pypoetry/virtualenvs/langfuse-practice-ygCFMd-0-py3.11/lib/python3.11/site-packages/ragas/llms/output_parser.py#71\u001b\\\u001b[2m71\u001b[0m\u001b]8;;\u001b\\\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'faithfulness': 0.9000, 'answer_relevancy': 0.3450, 'context_recall': 0.9000, 'context_precision': 0.9672}"
-      ]
-     },
-     "execution_count": 191,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
