--- a/CH01-LangChain시작하기/0.1.test.ipynb
+++ b/CH01-LangChain시작하기/0.1.test.ipynb
@@ -21,7 +21,31 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "# API KEY 정보로드\n",
-    "load_dotenv()"
+    "load_dotenv()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "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\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os \n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n",
+    "print(OPENAI_API_KEY)"
    ]
   },
   {
@@ -35,19 +59,15 @@
      "text": [
       "Collecting wikipedia\n",
       "  Using cached wikipedia-1.4.0-py3-none-any.whl\n",
-      "Collecting beautifulsoup4 (from wikipedia)\n",
-      "  Using cached beautifulsoup4-4.12.3-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.0.0 in c:\\users\\user\\anaconda3\\envs\\llm\\lib\\site-packages (from wikipedia) (2.32.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\user\\anaconda3\\envs\\llm\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\user\\anaconda3\\envs\\llm\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\user\\anaconda3\\envs\\llm\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2.2.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\user\\anaconda3\\envs\\llm\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2024.6.2)\n",
-      "Collecting soupsieve>1.2 (from beautifulsoup4->wikipedia)\n",
-      "  Using cached soupsieve-2.5-py3-none-any.whl.metadata (4.7 kB)\n",
-      "Using cached beautifulsoup4-4.12.3-py3-none-any.whl (147 kB)\n",
-      "Using cached soupsieve-2.5-py3-none-any.whl (36 kB)\n",
-      "Installing collected packages: soupsieve, beautifulsoup4, wikipedia\n",
-      "Successfully installed beautifulsoup4-4.12.3 soupsieve-2.5 wikipedia-1.4.0\n"
+      "Requirement already satisfied: beautifulsoup4 in c:\\users\\kim_h\\anaconda3\\envs\\rag\\lib\\site-packages (from wikipedia) (4.12.3)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.0.0 in c:\\users\\kim_h\\anaconda3\\envs\\rag\\lib\\site-packages (from wikipedia) (2.31.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\kim_h\\anaconda3\\envs\\rag\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\kim_h\\anaconda3\\envs\\rag\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\kim_h\\anaconda3\\envs\\rag\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\kim_h\\anaconda3\\envs\\rag\\lib\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2024.6.2)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\kim_h\\anaconda3\\envs\\rag\\lib\\site-packages (from beautifulsoup4->wikipedia) (2.5)\n",
+      "Installing collected packages: wikipedia\n",
+      "Successfully installed wikipedia-1.4.0\n"
      ]
     }
    ],
@@ -132,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
